--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
         "cypress:open": "cypress open"
     },
     "dependencies": {
-        "@vueuse/core": "7.1.2",
-        "vue": "3.2.4",
-        "vue-boring-avatars": "1.0.0",
-        "vue-router": "4.0.8",
-        "@vue/compiler-sfc": "3.0.5",
         "@vitejs/plugin-vue": "1.2.5",
+        "@vue/compiler-sfc": "3.0.5",
+        "@vueuse/core": "7.1.2",
         "tailwindcss": "3.0.2",
         "typescript": "4.3.2",
-        "vite": "2.4.3"
+        "vite": "2.4.3",
+        "vue": "3.2.4",
+        "vue-boring-avatars": "1.0.0",
+        "vue-router": "4.0.8"
     },
     "devDependencies": {
         "@types/node": "16.4.0",
@@ -47,6 +47,7 @@
         "stylelint-config-standard": "22.0.0",
         "tailwindcss": "3.0.2",
         "typescript": "4.3.2",
+        "vite-plugin-pwa": "^0.11.13",
         "vue-tsc": "0.29.7"
     }
 }
