--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "dependencies": {
         "@vitejs/plugin-vue": "1.2.5",
         "@vue/compiler-sfc": "3.0.5",
-        "@vueuse/core": "7.1.2",
+        "@vueuse/core": "^7.1.2",
+        "cheerio": "^1.0.0-rc.10",
+        "node-html-parser": "^5.2.0",
         "tailwindcss": "3.0.2",
         "typescript": "4.3.2",
         "vite": "2.4.3",
